--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "pg": "^8.12.0",
+    "ssl-root-cas": "^1.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
